// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockchain set currentBlockTime 1`] = `
"snippetCode.ts (4,18): Cannot assign to 'currentBlockTime' because it is a constant or a read-only property.

      2 |       import { Blockchain } from '@neo-one/smart-contract';
      3 | 
    > 4 |       Blockchain.currentBlockTime = 10;
        |                  ^
      5 |     
"
`;

exports[`Blockchain set currentCallerContract 1`] = `
"snippetCode.ts (4,18): Cannot assign to 'currentCallerContract' because it is a constant or a read-only property.

      2 |       import { Blockchain } from '@neo-one/smart-contract';
      3 | 
    > 4 |       Blockchain.currentCallerContract = Blockchain.currentCallerContract;
        |                  ^
      5 |     
"
`;

exports[`Blockchain set currentHeight 1`] = `
"snippetCode.ts (4,18): Cannot assign to 'currentHeight' because it is a constant or a read-only property.

      2 |       import { Blockchain } from '@neo-one/smart-contract';
      3 | 
    > 4 |       Blockchain.currentHeight = 10;
        |                  ^
      5 |     
"
`;

exports[`Blockchain set currentTransaction 1`] = `
"snippetCode.ts (4,18): Cannot assign to 'currentTransaction' because it is a constant or a read-only property.

      2 |       import { Blockchain } from '@neo-one/smart-contract';
      3 | 
    > 4 |       Blockchain.currentTransaction = Blockchain.currentTransaction;
        |                  ^
      5 |     
"
`;
